--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,7 @@
   html {
     scroll-behavior: smooth;
     overflow-x: hidden;
+    height: 100%;
   }
   body {
     @apply bg-background text-foreground;
